Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -17,21 +17,10 @@
 
     <section class="main-content">
       <h1>
-<a id="get_chat_history" class="anchor" href="#get_chat_history" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>get_chat_history</h1>
+<a id="get_chat_history" class="anchor" href="#get_chat_history" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/1Paint/GroupMe-Chat-History">get_chat_history</a>
+</h1>
 
-<p><strong>'get_chat_history'</strong> is an application that communicates with <a href="https://dev.groupme.com/">GroupMe's API</a> and can retrieve and download the chat histories of a GroupMe user given that user's GroupMe Access Token. Three versions of the application exists:</p>
-
-<ul>
-<li>
-<strong>get_chat_history.py</strong> - interacts with the user via a windowed GUI. Run this script only if you have both Python and PyQt4.</li>
-<li>
-<strong>get_chat_history_console.py</strong> - interacts with the user via the command line or console. Run this script if you have Python but not PyQt4.</li>
-<li>
-<strong>get_chat_history.exe</strong> - an executable file that does what 'get_chat_history.py' does. Run this if you do not have Python or PyQt4. Obtain by downloading and extracting the .rar file in the '<a href="https://github.com/1Paint/groupme_chat_history/tree/master/executable">executable</a>' folder. Download by pressing 'View Raw'.</li>
-</ul>
-
-<h2>
-<a id="preview" class="anchor" href="#preview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Preview</h2>
+<p><strong>'get_chat_history'</strong> is an application that communicates with <a href="https://dev.groupme.com/">GroupMe's API</a> and can retrieve and download the chat histories of a GroupMe user given that user's GroupMe Access Token.</p>
 
 <h3>
 <a id="application" class="anchor" href="#application" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Application</h3>
@@ -48,7 +37,8 @@
 <p><img src="http://i.imgur.com/mV7iA3H.png"></p>
 
 <h1>
-<a id="lol-champions" class="anchor" href="#lol-champions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>LoL Champions</h1>
+<a id="lol-champions" class="anchor" href="#lol-champions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/1Paint/LoL-Champions">LoL Champions</a>
+</h1>
 
 <p>A web app displaying League of Legends champion stats and abilities.</p>
 
@@ -89,12 +79,10 @@
 <p><img src="http://i.imgur.com/i76oDoL.png" width="600"> <img src="http://i.imgur.com/FWX6zJx.png" width="207"></p>
 
 <h1>
-<a id="wind-turbine-analysis" class="anchor" href="#wind-turbine-analysis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Wind Turbine Analysis</h1>
+<a id="wind-turbine-analysis" class="anchor" href="#wind-turbine-analysis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/1Paint/Wind-Turbine-Analysis">Wind Turbine Analysis</a>
+</h1>
 
 <p>Wind Turbine Analysis is an application that calculates the mechanical forces experienced by a wind turbine, as detailed <a href="https://github.com/1Paint/Wind-Turbine-Analysis/blob/master/documentation/tubine_details.pdf">here</a>. From these calculations, the application is able to determine if the wind turbine meets specified safety requirements.</p>
-
-<h2>
-<a id="preview-1" class="anchor" href="#preview-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Preview</h2>
 
 <h3>
 <a id="main-and-edit-windows" class="anchor" href="#main-and-edit-windows" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Main and Edit Windows</h3>
