Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     </section>
 
     <section class="main-content">
-      <h1>
+      <p>My GitHub: <a href="https://github.com/1Paint">https://github.com/1Paint</a></p>
+
+<h1>
 <a id="get_chat_history" class="anchor" href="#get_chat_history" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/1Paint/GroupMe-Chat-History">get_chat_history</a>
 </h1>
 
