Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <li>Homepage of champions filterable by role.</li>
 <li>An index page of champions filterable by role and a table of sortable stats—from general stats to level 1 and level 18 stats.</li>
 <li>Responsive and aesthetic layouts for desktop and mobile views.</li>
-<li>Dynamic retrieval of missing/misplaced API champion ability data (takes a few seconds to process all champion abilities and load the page. A possible future update will make the page static and only update when the API updates).</li>
+<li>Data on number of missing/misplaced API data for all champions' abilities.</li>
 </ul>
 
 <h2>
