Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
 <ul>
 <li>Dynamic retrieval of champions and their stats from Riot Game's latest API.</li>
 <li>Homepage of champions filterable by role.</li>
+<li>A 'Compare' page allowing users to view champions between different game versions.</li>
 <li>An index page of champions filterable by role and a table of sortable stats—from general stats to level 1 and level 18 stats.</li>
-<li>Responsive and aesthetic layouts for desktop and mobile views.</li>
 <li>Data on number of missing/misplaced API data for all champions' abilities.</li>
+<li>Responsive and aesthetic layouts for desktop and mobile views.</li>
 </ul>
 
 <h2>
@@ -79,6 +80,21 @@
 <a id="champion-index-with-sortable-stats" class="anchor" href="#champion-index-with-sortable-stats" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Champion Index with Sortable Stats</h3>
 
 <p><img src="http://i.imgur.com/i76oDoL.png" width="600"> <img src="http://i.imgur.com/FWX6zJx.png" width="207"></p>
+
+<h3>
+<a id="comparisons-page---stats-lucian-691-vs-jhin-691" class="anchor" href="#comparisons-page---stats-lucian-691-vs-jhin-691" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comparisons Page - Stats (Lucian 6.9.1 vs Jhin 6.9.1)</h3>
+
+<p><img src="http://i.imgur.com/X4NYkSI.png" width="600"></p>
+
+<h3>
+<a id="comparisons-page---stats-gragas-691-vs-gragas-385" class="anchor" href="#comparisons-page---stats-gragas-691-vs-gragas-385" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comparisons Page - Stats (Gragas 6.9.1 vs Gragas 3.8.5)</h3>
+
+<p><img src="http://i.imgur.com/sVfVjOP.png" width="600"></p>
+
+<h3>
+<a id="comparisons-page---abilities-gragas-691-vs-gragas-385" class="anchor" href="#comparisons-page---abilities-gragas-691-vs-gragas-385" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comparisons Page - Abilities (Gragas 6.9.1 vs Gragas 3.8.5)</h3>
+
+<p><img src="http://i.imgur.com/eRCofu3.png" width="600"></p>
 
 <h1>
 <a id="wind-turbine-analysis" class="anchor" href="#wind-turbine-analysis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/1Paint/Wind-Turbine-Analysis">Wind Turbine Analysis</a>
