Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
 
 <ul>
-<li>Dynamic retrieval of champions and their stats from Riot Game's latest API.</li>
+<li>Dynamic retrieval, processing, and formatting of champions and their stats from Riot Game's latest API.</li>
 <li>Homepage of champions filterable by role.</li>
 <li>A 'Compare' page allowing users to view champions between different game versions.</li>
 <li>An index page of champions filterable by role and a table of sortable stats—from general stats to level 1 and level 18 stats.</li>
