--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <p>A web app displaying League of Legends champion stats and abilities.</p>
 
-<p>Currently hosted at <a href="https://sleepy-cliffs-16895.herokuapp.com/">https://sleepy-cliffs-16895.herokuapp.com/</a></p>
+<p>Currently hosted at <a href="https://sleepy-cliffs-16895.herokuapp.com/">https://sleepy-cliffs-16895.herokuapp.com/</a> (will take a few seconds to boot up if server has been idle).</p>
 
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
